# VideoMind

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt  requirements_no_hash.txt
backend/app/: main.py
backend/app/api/: auth.py  router.py
backend/app/api/routers/: code.py  download.py  health.py  notes.py  ocr.py  status.py  summary.py  transcript.py  upload.py  youtube.py
backend/app/api/routes/: upload.py
backend/app/core/: exceptions.py  logging.py  model_manager.py  settings.py
backend/app/modules/audio/: converter.py  exceptions.py  extractor.py  metadata.py  normalizer.py  schemas.py  service.py  validator.py
backend/app/modules/chunking/: builder.py  chunker.py  exceptions.py  formatter.py  metadata.py  overlap.py  schemas.py  service.py  validator.py
backend/app/modules/code_extraction/: detector.py  exceptions.py  formatter.py  generator.py  language_detector.py  merger.py  metadata.py  prompt.py  schemas.py  service.py  syntax_validator.py  validator.py
backend/app/modules/downloader/: exceptions.py  service.py  youtube.py
backend/app/modules/llm/: aggregator.py  chunk_processor.py  exceptions.py  metadata.py  orchestrator.py  prompt_builder.py  schemas.py  service.py  validator.py
backend/app/modules/notes/: exceptions.py  formatter.py  generator.py  merger.py  metadata.py  prompt.py  schemas.py  service.py  validator.py
backend/app/modules/ocr/: cleaner.py  detector.py  engine.py  exceptions.py  formatter.py  (+5 more)
backend/app/schemas/: response.py  upload.py
backend/app/services/: storage_service.py  upload_service.py
(+117 files in other folders)
