[project]
name = "videomind-backend"
version = "0.1.0"
description = "VideoMind AI Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "loguru>=0.7.2",
    "python-multipart>=0.0.9",
    "celery>=5.3.6",
    "redis>=5.0.3",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.3.5",
]

[tool.ruff]
line-length = 88
